--- a/app/src/app/tab2/tab2.page.html
+++ b/app/src/app/tab2/tab2.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="About"></app-explore-container>
+  <app-explore-container name="About" text="{{about_text}}"></app-explore-container>
 </ion-content>
