--- a/app/src/app/profile/profile.component.html
+++ b/app/src/app/profile/profile.component.html
@@ -3,6 +3,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-title size="large">Perfil</ion-title>
+      <ion-button (click)="logout()">Logout</ion-button>
     </ion-toolbar>
   </ion-header>
     
@@ -12,5 +13,4 @@
     </ion-item>
   </ion-list>
 
-  
 </ion-content>
