--- a/app/src/app/list/list.component.html
+++ b/app/src/app/list/list.component.html
@@ -1,8 +1,8 @@
-
 <ion-content>
   <ion-header>
     <ion-toolbar>
       <ion-title size="large">Lista de Usuários</ion-title>
+      <ion-button (click)="logout()">Logout</ion-button>
     </ion-toolbar>
   </ion-header>
     
