--- a/app/src/app/list-item/list-item.component.html
+++ b/app/src/app/list-item/list-item.component.html
@@ -1,14 +1,31 @@
 <ion-content>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title size="large">Dados do Usuário</ion-title>
+      <ion-button (click)="logout()">Logout</ion-button>
+    </ion-toolbar>
+  </ion-header>
   <ion-card>
     <ion-item>
-      <ion-icon name="pin" slot="start"></ion-icon>
-      <ion-label>ion-item in a card, icon left, button right</ion-label>
-      <ion-button fill="outline" slot="end">View</ion-button>
+      <ion-avatar>
+        <img src="https://i.pravatar.cc/150?img={{ usuario.id }}">
+      </ion-avatar>
+      <ion-label>{{ usuario.nome | titlecase }}</ion-label>
+      <ion-button fill="outline" slot="end" (click)="returnLastPage()">Voltar</ion-button>
     </ion-item>
   
     <ion-card-content>
-      This is content, without any paragraph or header tags,
-      within an ion-card-content element.
+      <ion-list>
+        <ion-item>
+          <ion-label>Nascimento: {{ usuario.dataNascimento}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Email: {{ usuario.email }}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>CPF: {{ usuario.cpf }}</ion-label>
+        </ion-item>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
