--- a/app/src/app/profile/profile.component.html
+++ b/app/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
 <ion-content>
   <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Perfil</ion-title>
+      <ion-title size="large">Perfil | {{ usuario.nome | titlecase}}</ion-title>
       <ion-button (click)="logout()">Logout</ion-button>
     </ion-toolbar>
   </ion-header>
