--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="profile">
+    <ion-tab-button tab="item/{{usuario.id}}">
       <ion-icon name="people-outline"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
