--- a/app/src/app/list/list.component.html
+++ b/app/src/app/list/list.component.html
@@ -18,8 +18,7 @@
       <ion-label>
         <h2>{{user.nome | titlecase}}</h2>
       </ion-label>
-      <ion-button size="small">
-        <a color="light" [routerLink]="['/home/item/', i ]">Info</a>
+        <ion-button size="small" [routerLink]="['/home/item/', i ]">Info
       </ion-button>
     </ion-item>
 
